--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
 }
 
 /* COMMON */
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .app-container{
     width: 100%;
     height: 100vh;
@@ -26,6 +30,7 @@ main{
 
 footer{
     height: 70px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
 }
@@ -33,34 +38,54 @@ footer{
 /* HEADER */
 .header-left{
     width: 50%;
+    padding: 0 20px;
     display: flex;
     align-items: center;
-    /* test */
-    background-color: cornflowerblue;
+}
+
+.header-left h1{
+    font-size: 30px
+}
+
+.header-left img{
+    margin-right: 20px;
 }
 
 .header-right{
     width: 50%;
+    padding: 0 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
 
-    /* test */
-    background-color: darkcyan;
+.header-right select{
+    margin: 0 5px;
+    padding: 3px;
+    width: 200px;
+    border: 2px solid grey;
+    border-radius: 5px;
+    background-color: #e9e9ed;
+}
+
+.header-right #play-button{
+    padding: 4px 20px;
+    border: 2px solid grey;
+    border-radius: 5px;
+    background-color: #e9e9ed;
 }
 
 /* MAIN */
 .grid{
     width: 500px;
     height: 500px;
-    border: 2px solid black;
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
 }
 
 .square{
-    border: 2px solid black;
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
